learning string functions

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,11 +12,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'cdefg'"
+      "text/plain": "['H', ', th', 's ', 's a str', 'ng']"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 2
+     "execution_count": 120
     }
    ],
    "source": [
@@ -46,7 +46,26 @@
     "mystring[1:3]\n",
     "mystring[5:8]\n",
     "mystring[::2]\n",
-    "mystring[2:7:1]"
+    "mystring[2:7:1]\n",
+    "name = \"Sam\"\n",
+    "# name[0] = 'p'\n",
+    "last_letters = name[1:]\n",
+    "last_letters\n",
+    "'P' + last_letters\n",
+    "x = 'hello world, '\n",
+    "x = x + \"it is beautiful outside!\"\n",
+    "x\n",
+    "\n",
+    "x = 'hello world'\n",
+    "x.capitalize()\n",
+    "x.isspace()\n",
+    "x='Hello word'\n",
+    "x.isspace()\n",
+    "x.upper()\n",
+    "x.split()\n",
+    "x = 'Hi, this is a string'\n",
+    "x.split()\n",
+    "x.split('i')"
    ]
   }
  ],
